--- a/6-calendar-tasks-trackers/style.css
+++ b/6-calendar-tasks-trackers/style.css
@@ -15,8 +15,16 @@ body {
     margin: 0;
     height: 100vh;
 }
-
-.current {
+.has-task {
+    font-weight: bold;
+    color: #fff;
+    background: #66e961;
+    border: 1px solid #66e961;
+    border-radius: 25px;
+    padding: 0 5px;
+    width: fit-content;
+}
+div.current {
     font-weight: bold;
     color: #fff;
     background: #6cb2eb;
